# lidar_perception

./: README.md
lidar_perception/: CMakeLists.txt  README.md  package.xml  test_pipeline.py  test_pub.py
lidar_perception/config/: lidar_perception_params.yaml
lidar_perception/include/lidar_perception/: euclidean_cluster.hpp  ground_removal.hpp  object_tracker.hpp  roi_crop_filter.hpp  sensor_fusion.hpp  voxel_grid_filter.hpp
lidar_perception/launch/: lidar_perception_pipeline.launch.py
lidar_perception/msg/: BoundingBox3D.msg  BoundingBox3DArray.msg  CameraDetection.msg  CameraDetectionArray.msg
lidar_perception/scripts/: camera_detection_node.py  lidar_projection_node.py
lidar_perception/src/: euclidean_cluster_node.cpp  ground_removal_node.cpp  pipeline_monitor_node.cpp  roi_crop_filter_node.cpp  voxel_grid_filter_node.cpp
